# mandelox

./: .gitignore  Cargo.toml  bench.csv  mandelox.sublime-project
benches/: image.rs  solver.rs  stateinit.rs  workerpool.rs
src/: bench.rs  complex.rs  coord.rs  lib.rs  painter.rs  threads.rs  updater.rs
src/bench/: mod.rs  solver.rs  stateinit.rs
src/bins/: imagegen.rs  viewer.rs
src/gui/: mod.rs  updater.rs  widget.rs
src/imagegen/: bin.rs
src/solver/: array.rs  cell.rs  mod.rs  sarray.rs  simdvec.rs  vec.rs  vecuv.rs
src/state/: cell.rs  mod.rs  shared.rs  solver.rs
src/viewer/: bin.rs
