[package]
name = "mandelox"
version = "0.2.0"
edition = "2021"
default-run = "mandelox-gen"

[lib]
name = "mandelox"
path = "src/lib.rs"

[[bin]]
name = "mandelox-gen"
path = "src/bins/imagegen.rs"

[[bin]]
name = "mandelox-viewer"
path = "src/bins/viewer.rs"

[[bench]]
name = "workerpool"
harness = false

[[bench]]
name = "stateinit"
harness = false

[[bench]]
name = "solver"
harness = false

[[bench]]
name = "image"
harness = false

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
image = "0.24.4"
ndarray = "0.15.6"
num = "0.4.0"
num_cpus = "1.13.1"
