[package]
name = "mandelox"
version = "0.2.0"
edition = "2021"
default-run = "mandelox-imagegen"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", optional = true }
image = "0.24.4"
lazy_static = "1.4.0"
ndarray = "0.15.6"
num = "0.4.0"
num_cpus = "1.13.1"
structopt = { version = "0.3.26", optional = true }
ultraviolet = { version = "0.9.0", features = ["f64"] }
wide = { version = "0.7.5" }

[features]
default = ["cli", "gui"]
cli = ["structopt"]
gui = ["druid"]

[lib]
name = "mandelox"
path = "src/lib.rs"

[[bin]]
name = "mandelox-imagegen"
path = "src/bin/imagegen.rs"
required-features = ["cli"]

[[bin]]
name = "mandelox-viewer"
path = "src/bin/viewer.rs"
required-features = ["gui"]

[[bench]]
name = "workerpool"
harness = false

[[bench]]
name = "stateinit"
harness = false

[[bench]]
name = "solver"
harness = false

[[bench]]
name = "image"
harness = false

